create pr function

--- a/PR_simulation.ipynb
+++ b/PR_simulation.ipynb
@@ -102,7 +102,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d058df44-87f6-4b88-8a7b-60a922cb812d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -514,7 +520,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "e20b927b-3c79-47bd-91ad-2e3c3afa1db0",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -609,7 +621,115 @@
    "id": "8e70f323-141a-4aa9-84b4-3f4934ebe986",
    "metadata": {},
    "source": [
-    "## Model 3: The PR request moel - Version 0.01"
+    "## Model 3: The PR application model - Version 0.01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2607bd91-140d-4797-b556-4de95591d8ed",
+   "metadata": {},
+   "source": [
+    "* the SimPy environment\n",
+    "* resource capacity related inputs\n",
+    "* data structures to store data collected as PRs flow through the system\n",
+    "* the SimPy resources for modeling the various types of staff modeled\n",
+    "* process methods corresponding to processing times in each stage in the PR flow diagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d4e84338-e3dc-4f95-9d30-28caf1c8f246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class purchase_requisition(object):\n",
+    "    def __init__(self, env, num_coordinators, num_approvers, num_indirectbuyers, rg):\n",
+    "        # Simulation environment\n",
+    "        self.env = env\n",
+    "        self.rg = rg\n",
+    "        \n",
+    "        # list to hold timestamps dictionaries (one per PR)\n",
+    "        self.timestamps_list = []\n",
+    "        # list to hold PR queues (time, queue)\n",
+    "        self.pr_queue = [(0.0, 0.0)]\n",
+    "        self.postapproval_queue = [(0.0, 0.0)]\n",
+    "        \n",
+    "        # Create resources\n",
+    "        self.coordinator = simpy.Resource(env, num_coordinators)\n",
+    "        self.approver = simpy.Resource(env, num_approvers)\n",
+    "        self.indirectbuyer = Resource(env, num_indirectbuyers)\n",
+    "        \n",
+    "    # Process methods\n",
+    "    def create_PR(self, application):\n",
+    "        yield self.env.timeout(self.rg.exponential(1.0))\n",
+    "        \n",
+    "    def approve(self, application):\n",
+    "        yield self.env.timeout(self.rg.normal(4.0, 0.5))\n",
+    "        \n",
+    "    def create_po(self, application):\n",
+    "        yield self.env.timeout(self.rg.normal(2.0, 0.5))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df54414e-07ab-4c18-9bc3-f7face501e97",
+   "metadata": {},
+   "source": [
+    "**The create_pr function**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0e7318b-5d46-42ba-b8c8-f56aeb9269d7",
+   "metadata": {},
+   "source": [
+    "* the simulation environment\n",
+    "* the PR I.D\n",
+    "* the PR object (created from the PRapplication class)\n",
+    "* the random number generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72c97659-d21b-46df-8be1-39999be14739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createPR(env, application, purchase_requisition, rg):\n",
+    "    # An application is received\n",
+    "    app_request = env.now\n",
+    "    \n",
+    "    # release coordinator to create PR\n",
+    "    with purchase_requisition.coordinator.request() as request:\n",
+    "        yield request\n",
+    "        # With coordinator, create application\n",
+    "        got_coordinator_ts = env.now\n",
+    "        \n",
+    "        # increase and updated PR queue\n",
+    "        purchase_requisition.pr_queue.append((env.now, purchase_requisition.pr_queue[-1][1] + 1))\n",
+    "        \n",
+    "        yield env.process(purchase_requisition.create_PR(application))\n",
+    "        release_coordinator_ts = env.now\n",
+    "        \n",
+    "    # Request approver to approve PR\n",
+    "    with purchase_requisition.approver.request() as request:\n",
+    "        yield request\n",
+    "        got_approver_ts = env.now\n",
+    "        yield env.process(purchase_requisition.approve(application))\n",
+    "        release_approver_ts = env.now\n",
+    "        \n",
+    "        # decrease and update PR queue\n",
+    "        purchase_requisition.pr_queue.append((env.now, purchase_requisition.pr_queue[-1][1] - 1))\n",
+    "        \n",
+    "        # increase and update post approval queue\n",
+    "        purchase_requisition.postapproval_queue.append((env.now, purchase_requisition.postapproval_queue[-1][1] + 1))\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
    ]
   }
  ],
