--- a/PR_simulation.ipynb
+++ b/PR_simulation.ipynb
@@ -550,9 +550,11 @@
   {
    "cell_type": "markdown",
    "id": "b71b3fb9-5ed1-43f5-a320-7107448c5cd3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Function to launch simulation"
+    "# Function to Launch Simulation"
    ]
   },
   {
