--- a/PR_simulation.ipynb
+++ b/PR_simulation.ipynb
@@ -604,7 +604,7 @@
    "id": "150000f9-39b0-46c9-8771-b8c29ce7a93b",
    "metadata": {},
    "source": [
-    "### Run Simulation environment"
+    "### Run Simulation Environment"
    ]
   },
   {
@@ -662,7 +662,7 @@
    "id": "33879e7b-4d1e-472c-86b4-fb2167070063",
    "metadata": {},
    "source": [
-    "## Post-processing\n"
+    "## Post-Processing\n"
    ]
   },
   {
@@ -724,7 +724,7 @@
    "id": "aea01509-5700-4059-b25c-7b3520bfdebb",
    "metadata": {},
    "source": [
-    "## Key summary stats\n"
+    "## Key Summary Stats\n"
    ]
   },
   {
