--- a/PR_simulation.ipynb
+++ b/PR_simulation.ipynb
@@ -32,11 +32,11 @@
    "id": "46eaf511-671e-4bb7-8b52-b377640271e4",
    "metadata": {},
    "source": [
-    "Inorder to purchase items, it is common for organisations to require a set process for its members. Some organisations have dedicated departments and/or employees for this, such as the purchasing department, clerk etc. The title of the responsible entity may differ across organisations, however, the responsibilities tend to be similar. For organisations with a projectized structure, the project coordinators take up this responsibility, and depending on the size of the projectized organisation, other entities such as the finance department and the indirectbuyer can be involved. Here is an example of the flow of purchasing in such an organisation.\n",
+    "Inorder to purchase items, it is common for organisations to require a set process for its members. Some organisations have dedicated departments and/or employees for this, such as the purchasing department, clerk etc. The title of the responsible entity may differ across organisations, however, the responsibilities tend to be similar. For organisations with a projectized structure, the project coordinators take up this responsibility, and depending on the size of the organisation, other entities such as the finance department and the indirectbuyer can be involved. Here is an example of the flow of purchasing in such an organisation.\n",
     "\n",
     "Send application/request --> Create Purchase Requisition (PR) --> Approve Purchase Requisition --> place order (if online) --> issue PO to merchants --> Exit\n",
     "\n",
-    "Members/Employees of the organisation send applications/requests (by email) to project coordinators. Project Coordinators create **Purchase Requisitions** and route them to finance for approval. Once approved, purchase requisitions for items that are to be purchased online are routed to project coordinators to place order. Approved purchase requisitions are routed to the indirect buyers of the organisation to issue **Purchase Orders**\n",
+    "Members/Employees of the organisation send applications/requests (by email) to project coordinators. Project Coordinators create **Purchase Requisitions** and route them to finance for approval. Once approved, purchase requisitions for items that are to be purchased online are routed to project coordinators to place the order. Approved purchase requisitions are routed to the indirect buyers of the organisation to issue **Purchase Orders**\n",
     "\n",
     "For this model, the above flow will be adpoted. Here are the model components:\n",
     "\n",
